feat: LinearRegression Model

--- a/spark_nb.ipynb
+++ b/spark_nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "    RegexTokenizer, CountVectorizer,IDF, StringIndexer, PCA, StopWordsRemover\n",
     "from pyspark.sql.functions import avg, col, concat, count, desc, explode, lit, min, max, split, stddev, udf\n",
     "from pyspark.sql.types import IntegerType\n",
+    "from pyspark.ml.regression import LinearRegression\n",
     "\n",
     "import re"
    ]
@@ -1628,6 +1629,110 @@
    ],
    "source": [
     "df.where(df.Id == 512).collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LR:\n",
+    "# Question\n",
+    "Build a linear regression model using the length of the combined Title + Body fields. What is the value of r^2 when fitting a model with maxIter=5, regParam=0.0, fitIntercept=False, solver=\"normal\"?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_of_tags = udf(lambda x: len(x.split(\" \")), IntegerType())\n",
+    "df = df.withColumn(\"NumTags\", number_of_tags(df.Tags))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------------------+\n",
+      "|NumTags|   avg(DescLength)|\n",
+      "+-------+------------------+\n",
+      "|      1|143.68776158175783|\n",
+      "|      2| 162.1539186134137|\n",
+      "|      3|181.26021064340088|\n",
+      "|      4|201.46530249110322|\n",
+      "|      5|227.64375266524522|\n",
+      "+-------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.groupby(\"NumTags\").agg(avg(col(\"DescLength\"))).orderBy(\"NumTags\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Row(label=5, features=DenseVector([96.0]))"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = df.select(col(\"NumTags\").alias(\"label\"), col(\"DescVec\").alias(\"features\"))\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr = LinearRegression(maxIter=5, regParam=0.0, fitIntercept=False, solver=\"normal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lrModel_q1 = lr.fit(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4455149596308462"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lrModel_q1.summary.r2"
    ]
   },
   {
