feat: Modek Tuning

--- a/spark_nb.ipynb
+++ b/spark_nb.ipynb
@@ -2,17 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import avg, col, concat, count, desc, explode, lit, min, max, split, stddev, udf\n",
     "from pyspark.sql.types import IntegerType\n",
+    "\n",
     "from pyspark.ml.feature import RegexTokenizer, VectorAssembler, Normalizer, StandardScaler, \\\n",
     "    RegexTokenizer, CountVectorizer,IDF, StringIndexer, PCA, StopWordsRemover\n",
     "from pyspark.ml.regression import LinearRegression\n",
+    "from pyspark.ml.classification import LogisticRegression\n",
     "from pyspark.ml.clustering import KMeans\n",
+    "from pyspark.ml import Pipeline\n",
+    "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder\n",
+    "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
     "\n",
     "import re"
    ]
@@ -1472,8 +1477,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regexTokenizer = RegexTokenizer(inputCol=\"Desc\", outputCol=\"words2\", pattern=\"\\\\W\")\n",
-    "df = regexTokenizer.transform(df)\n",
     "df = df.withColumn(\"DescLength\", body_length(df.words2))"
    ]
   },
@@ -1889,18 +1892,188 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Model Tuning\n",
+    "\n",
+    "# Question\n",
+    "What is the accuracy of the best model trained with the parameter grid described above (and keeping all other parameters at their default value computed on the 10% untouched data?\n",
+    "\n",
+    "### Step 1. Train Test Split\n",
+    "As a first step break your data set into 90% of training data and set aside 10%. Set random seed to `42`."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[Body: string, Id: bigint, Tags: string, Title: string, oneTag: string]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stack_overflow_data = '../spark_project_data/Train_onetag_small.json'\n",
+    "df = spark.read.json(stack_overflow_data)\n",
+    "df.persist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rest, validation = df.randomSplit([0.9, 0.1], seed=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 2. Build Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Already done\n",
+    "regexTokenizer = RegexTokenizer(inputCol=\"Body\", outputCol=\"words\", pattern=\"\\\\W\")\n",
+    "cv = CountVectorizer(inputCol=\"words\", outputCol=\"TF\", vocabSize=1000)\n",
+    "idf = IDF(inputCol=\"TF\", outputCol=\"features\")\n",
+    "indexer = StringIndexer(inputCol=\"oneTag\", outputCol=\"label\")\n",
+    "pipeline = Pipeline(stages=[regexTokenizer, cv, idf, indexer, lr])\n",
+    "\n",
+    "lr =  LogisticRegression(maxIter=10, regParam=0.0, elasticNetParam=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 3. Tune Model\n",
+    "On the first 90% of the data let's find the most accurate logistic regression model using 3-fold cross-validation with the following parameter grid:\n",
+    "\n",
+    "- CountVectorizer vocabulary size: `[1000, 5000]`\n",
+    "- LogisticRegression regularization parameter: `[0.0, 0.1]`\n",
+    "- LogisticRegression max Iteration number: `[10]`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paramGrid = ParamGridBuilder() \\\n",
+    "    .addGrid(cv.vocabSize,[1000, 5000]) \\\n",
+    "    .addGrid(lr.regParam,[0.0, 0.1]) \\\n",
+    "    .build()\n",
+    "\n",
+    "\n",
+    "crossval = CrossValidator(estimator=pipeline,\n",
+    "                          estimatorParamMaps=paramGrid,\n",
+    "                          evaluator=MulticlassClassificationEvaluator(),\n",
+    "                          numFolds=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cvModel_q1 = crossval.fit(rest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.30433727418265316,\n",
+       " 0.30433727418265316,\n",
+       " 0.36935241731827617,\n",
+       " 0.36935241731827617]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cvModel_q1.avgMetrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = cvModel_q1.transform(validation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 4: Compute Accuracy of Best Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3892\n",
+      "9919\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(results.filter(results.label == results.prediction).count())\n",
+    "print(results.count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.392378263937897"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3892/9919"
+   ]
   },
   {
    "cell_type": "code",
