chore: Import libraries

--- a/Sparkify.ipynb
+++ b/Sparkify.ipynb
@@ -12,20 +12,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import libraries\n"
+    "# import libraries\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import avg, col, concat, count, desc, explode, lit, min, max, split, stddev, udf\n",
+    "from pyspark.sql.types import IntegerType\n",
+    "\n",
+    "from pyspark.ml.feature import RegexTokenizer, VectorAssembler, Normalizer, StandardScaler, \\\n",
+    "    RegexTokenizer, CountVectorizer,IDF, StringIndexer, PCA, StopWordsRemover\n",
+    "from pyspark.ml.regression import LinearRegression\n",
+    "from pyspark.ml.classification import LogisticRegression\n",
+    "from pyspark.ml.clustering import KMeans\n",
+    "from pyspark.ml import Pipeline\n",
+    "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder\n",
+    "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
+    "\n",
+    "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a Spark session\n"
+    "# create a Spark session\n",
+    "spark = SparkSession.builder \\\n",
+    "    .master(\"local\") \\\n",
+    "    .appName(\"sparkify\") \\\n",
+    "    .getOrCreate()"
    ]
   },
   {
@@ -35,6 +53,49 @@
     "# Load and Clean Dataset\n",
     "In this workspace, the mini-dataset file is `mini_sparkify_event_data.json`. Load and clean the dataset, checking for invalid or missing data - for example, records without userids or sessionids. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[artist: string, auth: string, firstName: string, gender: string, itemInSession: bigint, lastName: string, length: double, level: string, location: string, method: string, page: string, registration: bigint, sessionId: bigint, song: string, status: bigint, ts: bigint, userAgent: string, userId: string]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stack_overflow_data = '../spark_project_data/mini_sparkify_event_data.json'\n",
+    "df = spark.read.json(stack_overflow_data)\n",
+    "df.persist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
