feat: EDA part 1

--- a/Sparkify.ipynb
+++ b/Sparkify.ipynb
@@ -668,14 +668,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 116,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Row(userAgent=None)\n",
       "Row(userAgent='\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10) AppleWebKit/600.1.3 (KHTML, like Gecko) Version/8.0 Safari/600.1.3\"')\n",
       "Row(userAgent='\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10) AppleWebKit/600.1.8 (KHTML, like Gecko) Version/8.0 Safari/600.1.8\"')\n",
       "Row(userAgent='\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_6_8) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/36.0.1985.143 Safari/537.36\"')\n",
@@ -1167,7 +1168,7 @@
    "outputs": [],
    "source": [
     "# base on the EDA we can drop those 8346 rows, because those rows have nothing to do with Churn prediction\n",
-    "df = df.dropna(how = \"any\", subset = ['userId'])"
+    "df = df.dropna(how = \"any\", subset = ['userId','sessionId'])"
    ]
   },
   {
@@ -1636,15 +1637,29 @@
     }
    ],
    "source": [
+    "# is free level relevant?\n",
     "df.groupBy('level').count().show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-12860262767667000"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd_df.registration.sum()- pd_df.ts.sum()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1670,10 +1685,300 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+------+\n",
+      "|                page| count|\n",
+      "+--------------------+------+\n",
+      "|            NextSong|228108|\n",
+      "|           Thumbs Up| 12551|\n",
+      "|                Home| 10082|\n",
+      "|     Add to Playlist|  6526|\n",
+      "|          Add Friend|  4277|\n",
+      "|         Roll Advert|  3933|\n",
+      "|              Logout|  3226|\n",
+      "|         Thumbs Down|  2546|\n",
+      "|           Downgrade|  2055|\n",
+      "|            Settings|  1514|\n",
+      "|                Help|  1454|\n",
+      "|             Upgrade|   499|\n",
+      "|               About|   495|\n",
+      "|       Save Settings|   310|\n",
+      "|               Error|   252|\n",
+      "|      Submit Upgrade|   159|\n",
+      "|    Submit Downgrade|    63|\n",
+      "|              Cancel|    52|\n",
+      "|Cancellation Conf...|    52|\n",
+      "+--------------------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.groupBy('page').count().sort(desc('count')).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(userId=3),\n",
+       " Row(userId=12),\n",
+       " Row(userId=17),\n",
+       " Row(userId=18),\n",
+       " Row(userId=28),\n",
+       " Row(userId=29),\n",
+       " Row(userId=32),\n",
+       " Row(userId=51),\n",
+       " Row(userId=53),\n",
+       " Row(userId=54),\n",
+       " Row(userId=58),\n",
+       " Row(userId=70),\n",
+       " Row(userId=73),\n",
+       " Row(userId=87),\n",
+       " Row(userId=101),\n",
+       " Row(userId=103),\n",
+       " Row(userId=105),\n",
+       " Row(userId=106),\n",
+       " Row(userId=121),\n",
+       " Row(userId=122),\n",
+       " Row(userId=125),\n",
+       " Row(userId=129),\n",
+       " Row(userId=143),\n",
+       " Row(userId=100001),\n",
+       " Row(userId=100003),\n",
+       " Row(userId=100005),\n",
+       " Row(userId=100006),\n",
+       " Row(userId=100007),\n",
+       " Row(userId=100009),\n",
+       " Row(userId=100011),\n",
+       " Row(userId=100012),\n",
+       " Row(userId=100013),\n",
+       " Row(userId=100014),\n",
+       " Row(userId=100015),\n",
+       " Row(userId=100017),\n",
+       " Row(userId=100019),\n",
+       " Row(userId=100021),\n",
+       " Row(userId=100022),\n",
+       " Row(userId=100023),\n",
+       " Row(userId=100024),\n",
+       " Row(userId=100025),\n",
+       " Row(userId=200001),\n",
+       " Row(userId=200011),\n",
+       " Row(userId=200015),\n",
+       " Row(userId=200016),\n",
+       " Row(userId=200017),\n",
+       " Row(userId=200018),\n",
+       " Row(userId=200020),\n",
+       " Row(userId=200021),\n",
+       " Row(userId=200024),\n",
+       " Row(userId=300001),\n",
+       " Row(userId=300007)]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.filter(\"page = 'Cancellation Confirmation'\").select('userId').sort('userId').collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['artist', 'auth', 'firstName', 'gender', 'itemInSession', 'lastName',\n",
+       "       'length', 'level', 'location', 'method', 'page', 'registration',\n",
+       "       'sessionId', 'song', 'status', 'ts', 'userAgent', 'userId'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+------+-------------+---------+-----+------+-----------+-------------+-------------+---------+------+\n",
+      "|     auth|gender|itemInSession|   length|level|method|       page| registration|           ts|sessionId|status|\n",
+      "+---------+------+-------------+---------+-----+------+-----------+-------------+-------------+---------+------+\n",
+      "|Logged In|     F|            0|     null| free|   GET|       Home|1537681013000|1541720842000|      179|   200|\n",
+      "|Logged In|     F|            1|     null| free|   PUT| Add Friend|1537681013000|1541720843000|      179|   307|\n",
+      "|Logged In|     F|            2|     null| free|   PUT| Add Friend|1537681013000|1541720844000|      179|   307|\n",
+      "|Logged In|     F|            3|259.76118| free|   PUT|   NextSong|1537681013000|1541720868000|      179|   200|\n",
+      "|Logged In|     F|            4|655.77751| free|   PUT|   NextSong|1537681013000|1541721127000|      179|   200|\n",
+      "|Logged In|     F|            0|     null| free|   GET|       Home|1537681013000|1542987594000|     1745|   200|\n",
+      "|Logged In|     F|            1|     null| free|   PUT| Add Friend|1537681013000|1542987595000|     1745|   307|\n",
+      "|Logged In|     F|            2|  186.122| free|   PUT|   NextSong|1537681013000|1542987640000|     1745|   200|\n",
+      "|Logged In|     F|            3|221.23057| free|   PUT|   NextSong|1537681013000|1542987826000|     1745|   200|\n",
+      "|Logged In|     F|            4|     null| free|   GET|Roll Advert|1537681013000|1542987842000|     1745|   200|\n",
+      "|Logged In|     F|            5|160.02567| free|   PUT|   NextSong|1537681013000|1542988047000|     1745|   200|\n",
+      "|Logged In|     F|            6|     null| free|   PUT|  Thumbs Up|1537681013000|1542988048000|     1745|   307|\n",
+      "|Logged In|     F|            7|234.91873| free|   PUT|   NextSong|1537681013000|1542988207000|     1745|   200|\n",
+      "|Logged In|     F|            8|247.24853| free|   PUT|   NextSong|1537681013000|1542988441000|     1745|   200|\n",
+      "|Logged In|     F|            9|231.05261| free|   PUT|   NextSong|1537681013000|1542988688000|     1745|   200|\n",
+      "|Logged In|     F|           10|212.29669| free|   PUT|   NextSong|1537681013000|1542988919000|     1745|   200|\n",
+      "|Logged In|     F|           11|     null| free|   GET|Roll Advert|1537681013000|1542988921000|     1745|   200|\n",
+      "|Logged In|     F|           12| 204.7473| free|   PUT|   NextSong|1537681013000|1542989131000|     1745|   200|\n",
+      "|Logged In|     F|           13|234.68363| free|   PUT|   NextSong|1537681013000|1542989335000|     1745|   200|\n",
+      "|Logged In|     F|           14|420.44036| free|   PUT|   NextSong|1537681013000|1542989569000|     1745|   200|\n",
+      "|Logged In|     F|           15|262.05995| free|   PUT|   NextSong|1537681013000|1542989989000|     1745|   200|\n",
+      "|Logged In|     F|           16|199.67955| free|   PUT|   NextSong|1537681013000|1542990251000|     1745|   200|\n",
+      "|Logged In|     F|           17| 235.2322| free|   PUT|   NextSong|1537681013000|1542990450000|     1745|   200|\n",
+      "|Logged In|     F|           18|210.59873| free|   PUT|   NextSong|1537681013000|1542990685000|     1745|   200|\n",
+      "|Logged In|     F|           19|372.29669| free|   PUT|   NextSong|1537681013000|1542990895000|     1745|   200|\n",
+      "|Logged In|     F|           20|     null| free|   GET|Roll Advert|1537681013000|1542990901000|     1745|   200|\n",
+      "|Logged In|     F|           21|247.66649| free|   PUT|   NextSong|1537681013000|1542991267000|     1745|   200|\n",
+      "|Logged In|     F|           22|210.88608| free|   PUT|   NextSong|1537681013000|1542991514000|     1745|   200|\n",
+      "|Logged In|     F|           23|312.29342| free|   PUT|   NextSong|1537681013000|1542991724000|     1745|   200|\n",
+      "|Logged In|     F|           24|204.79955| free|   PUT|   NextSong|1537681013000|1542992036000|     1745|   200|\n",
+      "|Logged In|     F|           25|282.01751| free|   PUT|   NextSong|1537681013000|1542992240000|     1745|   200|\n",
+      "|Logged In|     F|           26|160.15628| free|   PUT|   NextSong|1537681013000|1542992522000|     1745|   200|\n",
+      "|Logged In|     F|           27|     null| free|   PUT|  Thumbs Up|1537681013000|1542992523000|     1745|   307|\n",
+      "|Logged In|     F|           28|289.69751| free|   PUT|   NextSong|1537681013000|1542992682000|     1745|   200|\n",
+      "|Logged In|     F|           29|285.93587| free|   PUT|   NextSong|1537681013000|1542992971000|     1745|   200|\n",
+      "|Logged In|     F|           30|     null| free|   PUT|  Thumbs Up|1537681013000|1542992972000|     1745|   307|\n",
+      "|Logged In|     F|           31|218.90567| free|   PUT|   NextSong|1537681013000|1542993256000|     1745|   200|\n",
+      "|Logged In|     F|           32|     null| free|   GET|Roll Advert|1537681013000|1542993274000|     1745|   200|\n",
+      "|Logged In|     F|           33|233.74322| free|   PUT|   NextSong|1537681013000|1542993474000|     1745|   200|\n",
+      "|Logged In|     F|           34| 409.5473| free|   PUT|   NextSong|1537681013000|1542993707000|     1745|   200|\n",
+      "+---------+------+-------------+---------+-----+------+-----------+-------------+-------------+---------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sample logs for FE\n",
+    "df.select(['auth', 'gender', 'itemInSession',\n",
+    "       'length', 'level', 'method', 'page', 'registration','ts',\n",
+    "       'sessionId', 'status']).where(df.userId == 22).show(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "212"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sample logs for FE\n",
+    "df.select(['song']).where(df.userId == 3).distinct().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>song</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>None</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>You're The One</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>Siguiendo La Luna</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  song  count\n",
+       "53                None     40\n",
+       "67      You're The One      3\n",
+       "157  Siguiendo La Luna      2"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = df.filter(df.userId == 3).groupBy('song').count().toPandas()\n",
+    "c[c['count']>1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1687,6 +1992,41 @@
     "\n",
     "If you are working in the classroom workspace, you can just extract features based on the small subset of data contained here. Be sure to transfer over this work to the larger dataset when you work on your Spark cluster."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FE Note:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
