doc: Add feature engineering notes

--- a/Sparkify.ipynb
+++ b/Sparkify.ipynb
@@ -2005,7 +2005,146 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Features : ——————————————————\n",
+    "    \n",
+    "# key_userId\n",
+    "\n",
+    "# (drop page == ‘cancelations’x2)\n",
+    "# ts to yyyy/mm/dd/hh\n",
+    "\n",
+    "# X cat_most_listened_artist, most_linstend_song??? - can be non-singular value\n",
+    "\n",
+    "# cat_top_20_artist_lover? \n",
+    "# cat_top_50_artist_lover? \n",
+    "# cat_top_100_song_lover? \n",
+    "# cat_top_200_song_lover?\n",
+    "# cat_bottom_20_artist_lover? \n",
+    "# cat_bottom_50_artist_lover? \n",
+    "# cat_bottom_100_song_lover? \n",
+    "# cat_bottom_200_song_lover?\n",
+    "\n",
+    "# num_linstened_artist\n",
+    "\n",
+    "# num_logs_groupby_artist_max\n",
+    "# num_logs_groupby_artist_max_count\n",
+    "# num_logs_groupby_artist_min\n",
+    "# num_logs_groupby_artist_min_count\n",
+    "# num_logs_groupby_artist_std\n",
+    "# num_logs_groupby_artist_avg\n",
+    "# num_logs_groupby_artist_median\n",
+    "\n",
+    "# num_logs\n",
+    "# num_logged_in\n",
+    "# num_cancelled\n",
+    "# num_cancelled_ratio\n",
+    "\n",
+    "# cat_gender\n",
+    "\n",
+    "# num_itemInSession_max\n",
+    "# num_itemInSession_avg\n",
+    "# num_itemInSession_median\n",
+    "# num_itemInSession_std\n",
+    "\n",
+    "# num_length_max\n",
+    "# num_length_min\n",
+    "# num_length_sum\n",
+    "# num_length_std\n",
+    "# num_length_avg\n",
+    "# num_length_median\n",
+    "# num_conti_length_by_page_max\n",
+    "# num_conti_length_by_page_min\n",
+    "# num_conti_length_by_page_std\n",
+    "# num_conti_length_by_ts_max\n",
+    "# num_conti_length_by_ts_min\n",
+    "# num_conti_length_by_ts_std\n",
+    "\n",
+    "# num_level_free\n",
+    "# num_level_paid\n",
+    "# num_level_paid_ratio\n",
+    "\n",
+    "# num_location_distinct\n",
+    "# cat_max_num_location_state\n",
+    "# cat_max_num_location\n",
+    "# num_max_num_location_geocode_long\n",
+    "# num_max_num_location_geocode_lat\n",
+    "\n",
+    "# num_method_get\n",
+    "# num_method_put\n",
+    "# num_method_put_ratio\n",
+    "\n",
+    "# (drop page == ‘cancelations’x2)\n",
+    "# num_count_groupby_page x n19 - cancellation x 2 = 17\n",
+    "# num_count_groupby_page_ratio x n19 - - cancellation x 2 = 17\n",
+    "# num_tu_vs_nextsong_ratio\n",
+    "# num_td_vs_nextsong_ratio\n",
+    "# num_plist_vs_nextsong_ratio\n",
+    "# num_roll_vs_nextsong_ratio\n",
+    "# num_ns+tu+td+plist_vs_rest17_ratio\n",
+    "# (More detail on pages….)\n",
+    "\n",
+    "# ts_registration\n",
+    "# ts_registration_year\n",
+    "# ts_registration_month\n",
+    "# ts_registration_date\n",
+    "# ts_registration_weekday\n",
+    "# ts_registration_hour\n",
+    "# num_registration-ts_max\n",
+    "\n",
+    "# num_distinct_sessionId_count\n",
+    "# num_log_count_groupby_sessionId_max\n",
+    "# num_log_count_groupby_sessionId_min\n",
+    "# num_log_count_groupby_sessionId_mean\n",
+    "# num_log_count_groupby_sessionId_median\n",
+    "# num_log_count_groupby_sessionId_std\n",
+    "# num_sessionId_gap_max\n",
+    "# num_sessionId_gap_min\n",
+    "# num_sessionId_gap_mean\n",
+    "# num_sessionId_gap_median\n",
+    "# num_sessionId_gap_std\n",
+    "\n",
+    "# num_total_songs(num_count_groupby_(page=nextSong))\n",
+    "# num_distinct_songs\n",
+    "# num_log_count_groupby_song_max(none-null)\n",
+    "# num_log_count_groupby_song_min(none-null)\n",
+    "# num_log_count_groupby_song_mean(none-null)\n",
+    "# num_log_count_groupby_song_median(none-null)\n",
+    "# num_log_count_groupby_song_std(none-null)\n",
+    "\n",
+    "# num_status_200_count\n",
+    "# num_status_307_count\n",
+    "# num_status_404_count\n",
+    "# num_status_200_count_ratio\n",
+    "# num_status_307_count_ratio\n",
+    "# num_status_404_count_ratio\n",
+    "\n",
+    "# ts_max-registration\n",
+    "# ts_min-registration\n",
+    "# ts_std\n",
+    "# ts_log_count_by_years\n",
+    "# ts_song_pages_count_by_years\n",
+    "# ts_song_pages_count_by_month / season? / weekday?\n",
+    "# ts_hours_max_all\n",
+    "# ts_hours_min_all\n",
+    "# ts_hours_mean_all\n",
+    "# ts_hours_median_all\n",
+    "# ts_hours_std_all\n",
+    "# ts_hours_max_song_pages\n",
+    "# ts_hours_min_song_pages\n",
+    "# ts_hours_mean_song_pages\n",
+    "# ts_hours_median_song_pages\n",
+    "# ts_hours_std_song_pages\n",
+    "\n",
+    "# num_log_count_by_userAgent_device\n",
+    "# num_log_count_by_userAgent_browser_large\n",
+    "# num_log_count_by_userAgent_browser_detailed\n",
+    "# num_page_song_count_by_userAgent_device\n",
+    "# num_page_song_by_userAgent_browser_large\n",
+    "# num_page_song_by_userAgent_browser_detailed\n",
+    "# num_page_util_count_by_userAgent_device\n",
+    "# num_page_util_by_userAgent_browser_large\n",
+    "# num_page_util_by_userAgent_browser_detailed"
+   ]
   },
   {
    "cell_type": "code",
